# glwx

./: .gitignore  CMakeLists.txt  README.md  arrow.h  force_particle.h  main.cpp  prob1_solver.h  prob1_world.cpp  prob1_world.h  prob2_solver.h  prob2_world.h
glwx/: glad.c  xcamera.cpp  xcamera.h  xline.cpp  xline.h  xobject.cpp  xobject.h  xparticle.cpp  xparticle.h  xshader.cpp  xshader.h  xsolver.h  xtexture.h  xworld.cpp  xworld.h
